--- a/selfTest.html
+++ b/selfTest.html
@@ -15,6 +15,7 @@
 		</style>
 	</head>
 	<body ng-app = "testApp1" ng-cloak>
+	<h1>Qidong's Version</h1>
 		<div ng-controller = "testController">
 			First person: <input type="text" ng-model = "num1"><br>
 			Second Num: <input type="text" ng-model = "num2"><br>
